# challenge-watch-cli

./: Cargo.toml  README.md
.github/workflows/: rust.yml  security-audit.yml
src/: lib.rs  main.rs
tests/: cli.rs
