[package]
name = "challenge_watch_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
ctrlc = "3.2.1"
log = "0.4.14"
notify = "4.0.17"
pretty_env_logger = "0.4.0"

[dev-dependencies]
tempdir = "0.3.7"
